--- a/index.html
+++ b/index.html
@@ -20,37 +20,43 @@
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body class="body">
-    <header>
-      <nav>
-        <a class="logo link" href="./index.html"
-          >Web<span class="text-logo link">Studio</span>
-        </a>
-        <ul class="list">
-          <li>
-            <a class="link-text link" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="link-text link" href="">Portfolio</a>
-          </li>
-          <li>
-            <a class="link-text link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="top-address">
-        <ul class="list">
-          <li>
-            <a class="address-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="address-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="page-header">
+      <!-- nav -->
+      <div class="container">
+        <d iv class="header-container">
+          <nav>
+            <a class="logo link" href="./index.html"
+              >Web<span class="text-logo link">Studio</span>
+            </a>
+            <ul class="studio-list list">
+              <li>
+                <a class="link-text link" href="./index.html">Studio</a>
+              </li>
+              <li>
+                <a class="link-text link" href="">Portfolio</a>
+              </li>
+              <li>
+                <a class="link-text link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <!-- address -->
+          <address class="top-address">
+            <ul class="list">
+              <li>
+                <a class="address-link link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="address-link link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </d>
+      </div>
     </header>
     <main>
       <!-- section 1 -->
