--- a/index.html
+++ b/index.html
@@ -21,194 +21,207 @@
   </head>
   <body class="body">
     <header class="page-header">
-      <!-- nav -->
-      <div class="container">
-        <d iv class="header-container">
-          <nav>
-            <a class="logo link" href="./index.html"
-              >Web<span class="text-logo link">Studio</span>
-            </a>
-            <ul class="studio-list list">
-              <li>
-                <a class="link-text link" href="./index.html">Studio</a>
-              </li>
-              <li>
-                <a class="link-text link" href="">Portfolio</a>
-              </li>
-              <li>
-                <a class="link-text link" href="">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-          <!-- address -->
-          <address class="top-address">
-            <ul class="list">
-              <li>
-                <a class="address-link link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="address-link link" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </d>
+      <div class="container page-header-container">
+        <!-- nav -->
+        <nav class="nav-container">
+          <a class="logo link" href="./index.html"
+            >Web<span class="text-logo link">Studio</span>
+          </a>
+          <ul class="list list-container">
+            <li>
+              <a class="link-text link" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="link-text link" href="">Portfolio</a>
+            </li>
+            <li>
+              <a class="link-text link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- address -->
+        <address class="top-address">
+          <ul class="list address-container">
+            <li>
+              <a class="address-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="address-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
       <!-- section 1 -->
       <section class="first-section">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+        <div class="container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="button">Order Service</button>
+        </div>
       </section>
       <!-- section 2 -->
-      <section>
-        <h2 class="title">Advantages</h2>
-        <ul class="list">
-          <li>
-            <h3 class="section-title">Strategy</h3>
-            <p class="section-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Punctuality</h3>
-            <p class="section-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Diligence</h3>
-            <p class="section-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Technologies</h3>
-            <p class="section-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="title visually-hidden">Advantages</h2>
+          <ul class="list advantages-list-container">
+            <li class="advantages-list-item">
+              <h3 class="section-title item-container">Strategy</h3>
+              <p class="section-text item-container">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-title item-container">Punctuality</h3>
+              <p class="section-text item-container">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-title item-container">Diligence</h3>
+              <p class="section-text item-container">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-title item-container">Technologies</h3>
+              <p class="section-text item-container">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- section 3 -->
-      <section class="third-section">
-        <h2 class="title">Our Team</h2>
-        <ul class="list">
-          <li class="list-item">
-            <img
-              src="./images/1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-title">Mark Guerrero</h3>
-            <p class="section-text">Product Designer</p>
-          </li>
-          <li class="list-item">
-            <img src="./images/2.jpg" alt="Tom Ford" width="264" height="260" />
-            <h3 class="section-title">Tom Ford</h3>
-            <p class="section-text">Frontend Developer</p>
-          </li>
-          <li class="list-item">
-            <img
-              src="./images/3.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-title">Camila Garcia</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li class="list-item">
-            <img
-              src="./images/4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-title">Daniel Wilson</h3>
-            <p class="section-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="third-section section">
+        <div class="container">
+          <h2 class="title">Our Team</h2>
+          <ul class="list team-container">
+            <li class="list-item">
+              <img
+                src="./images/1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-title team-item">Mark Guerrero</h3>
+              <p class="section-text team-text">Product Designer</p>
+            </li>
+            <li class="list-item">
+              <img
+                src="./images/2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-title team-item">Tom Ford</h3>
+              <p class="section-text team-text">Frontend Developer</p>
+            </li>
+            <li class="list-item">
+              <img
+                src="./images/3.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-title team-item">Camila Garcia</h3>
+              <p class="section-text team-text">Marketing</p>
+            </li>
+            <li class="list-item">
+              <img
+                src="./images/4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-title team-item">Daniel Wilson</h3>
+              <p class="section-text team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- section 4 -->
-      <section>
-        <h2 class="title">Our Portfolio</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/img.jpg" alt="app" width="360" height="300" />
-            <h3 class="section-title">Banking App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/payment.jpg"
-              alt="payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Cashless Payment</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/maditation.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Meditation App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/taxi.jpg"
-              alt="driver"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Taxi Service</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/screen.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Screen Illustrations</h3>
-            <p class="section-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/courses.jpg"
-              alt="girl"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-title">Online Courses</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="title">Our Portfolio</h2>
+          <ul class="list portfolio-list">
+            <li class="portfolio-list-item">
+              <img src="./images/img.jpg" alt="app" width="360" height="300" />
+              <h3 class="section-title">Banking App</h3>
+              <p class="section-text">App</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/payment.jpg"
+                alt="payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Cashless Payment</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/maditation.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Meditation App</h3>
+              <p class="section-text">App</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/taxi.jpg"
+                alt="driver"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Taxi Service</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/screen.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Screen Illustrations</h3>
+              <p class="section-text">Design</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/courses.jpg"
+                alt="girl"
+                width="360"
+                height="300"
+              />
+              <h3 class="section-title">Online Courses</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo link" href="./index.html"
-        >Web<span class="logo-footer link">Studio</span></a
-      >
-      <p class="text-footer">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo link" href="./index.html"
+          >Web<span class="logo-footer link">Studio</span></a
+        >
+        <p class="text-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
