--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-title team-item">Mark Guerrero</h3>
-              <p class="section-text team-text">Product Designer</p>
+              <div class="team-text-container">
+                <h3 class="section-title">Mark Guerrero</h3>
+                <p class="section-text">Product Designer</p>
+              </div>
             </li>
             <li class="list-item">
               <img
@@ -122,8 +124,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-title team-item">Tom Ford</h3>
-              <p class="section-text team-text">Frontend Developer</p>
+              <div class="team-text-container">
+                <h3 class="section-title team-item">Tom Ford</h3>
+                <p class="section-text team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="list-item">
               <img
@@ -132,8 +136,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-title team-item">Camila Garcia</h3>
-              <p class="section-text team-text">Marketing</p>
+              <div class="team-text-container">
+                <h3 class="section-title team-item">Camila Garcia</h3>
+                <p class="section-text team-text">Marketing</p>
+              </div>
             </li>
             <li class="list-item">
               <img
@@ -142,8 +148,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="section-title team-item">Daniel Wilson</h3>
-              <p class="section-text team-text">UI Designer</p>
+              <div class="team-text-container">
+                <h3 class="section-title team-item">Daniel Wilson</h3>
+                <p class="section-text team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -155,8 +163,10 @@
           <ul class="list portfolio-list">
             <li class="portfolio-list-item">
               <img src="./images/img.jpg" alt="app" width="360" height="300" />
-              <h3 class="section-title">Banking App</h3>
-              <p class="section-text">App</p>
+              <div class="title-text-container">
+                <h3 class="section-title">Banking App</h3>
+                <p class="section-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -165,8 +175,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Cashless Payment</h3>
-              <p class="section-text">Marketing</p>
+              <div class="title-text-container">
+                <h3 class="section-title">Cashless Payment</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -175,8 +187,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Meditation App</h3>
-              <p class="section-text">App</p>
+              <div class="title-text-container">
+                <h3 class="section-title">Meditation App</h3>
+                <p class="section-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -185,8 +199,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Taxi Service</h3>
-              <p class="section-text">Marketing</p>
+              <div class="title-text-container">
+                <h3 class="section-title">Taxi Service</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -195,8 +211,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Screen Illustrations</h3>
-              <p class="section-text">Design</p>
+              <div class="title-text-container">
+                <h3 class="section-title">Screen Illustrations</h3>
+                <p class="section-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -205,16 +223,18 @@
                 width="360"
                 height="300"
               />
-              <h3 class="section-title">Online Courses</h3>
-              <p class="section-text">Marketing</p>
+              <div class="title-text-container">
+                <h3 class="section-title">Online Courses</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="main-footer">
       <div class="container">
-        <a class="logo link" href="./index.html"
+        <a class="logo link logo-end" href="./index.html"
           >Web<span class="logo-footer link">Studio</span></a
         >
         <p class="text-footer">
