--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!-- section 2 -->
       <section class="section">
         <div class="container">
-          <h2 class="title visually-hidden">Advantages</h2>
+          <h2 class="visually-hidden">Advantages</h2>
           <ul class="list advantages-list-container">
             <li class="advantages-list-item">
               <h3 class="section-title item-container">Strategy</h3>
@@ -76,21 +76,21 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="advantages-list-item">
               <h3 class="section-title item-container">Punctuality</h3>
               <p class="section-text item-container">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="advantages-list-item">
               <h3 class="section-title item-container">Diligence</h3>
               <p class="section-text item-container">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="advantages-list-item">
               <h3 class="section-title item-container">Technologies</h3>
               <p class="section-text item-container">
                 Design practice focused on digital experiences. We bring forth a
@@ -125,8 +125,8 @@
                 height="260"
               />
               <div class="team-text-container">
-                <h3 class="section-title team-item">Tom Ford</h3>
-                <p class="section-text team-text">Frontend Developer</p>
+                <h3 class="section-title">Tom Ford</h3>
+                <p class="section-text">Frontend Developer</p>
               </div>
             </li>
             <li class="list-item">
@@ -137,8 +137,8 @@
                 height="260"
               />
               <div class="team-text-container">
-                <h3 class="section-title team-item">Camila Garcia</h3>
-                <p class="section-text team-text">Marketing</p>
+                <h3 class="section-title">Camila Garcia</h3>
+                <p class="section-text">Marketing</p>
               </div>
             </li>
             <li class="list-item">
@@ -149,8 +149,8 @@
                 height="260"
               />
               <div class="team-text-container">
-                <h3 class="section-title team-item">Daniel Wilson</h3>
-                <p class="section-text team-text">UI Designer</p>
+                <h3 class="section-title">Daniel Wilson</h3>
+                <p class="section-text">UI Designer</p>
               </div>
             </li>
           </ul>
